--- a/HTML+CSS/senicare/style.css
+++ b/HTML+CSS/senicare/style.css
@@ -1,21 +1,16 @@
-body {
-    margin: 0px;
-    font-family: sans-serif;
-}
-
 #sign-in-wrapper {
     display: flex;
 
     width: 100%;
     min-width: 1440px;
     height: 100vh;
-    min-height: 944px;
+    min-height: 964px;
 }
 
 .sign-in-image {
     width: 830px;
     background-image: url(./images/main-image.png);
-    background-size: auto;
+    background-size: cover;
 }
 
 .sign-in-container {
@@ -33,25 +28,25 @@ body {
     gap: 24px;
 
     width: 380px;
-
 }
 
 .title-box {
     display: flex;
-    align-items: center; /* 중앙 정렬*/
-    gap: 2px; /* 제목과 로고 사이의 간격 */
+    align-items: center;
+    gap: 2px;
 }
 
-.title-box .title{
-    font-size : 30px;
-    font-weight : 700;
+.title-box .title {
+    font-size: 30px;
+    font-weight: 700;
     line-height: 173%;
     color: var(--dark-gray-color);
 }
 
 .title-box .logo {
-    width : 30px;
-    height : 30px;
+    width: 30px;
+    height: 30px;
+
     background-image: url(./images/logo.png);
     background-size: 100% 100%;
 }
@@ -64,56 +59,6 @@ body {
     gap: 14px;
 }
 
-.input-box {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-
-}
-
-.input-box .label {
-    font-size : 16px;
-    font-weight : 400;
-    color: var(--gray-color);
-}
-
-.input-box input {
-    background-color: none;
-    border : none;
-    outline: none;
-
-    border: 1px solid rgba(238, 238, 238, 1);
-    border-radius: 6px;
-    padding: 8px 16px;
-    background-color: rgba(255, 255, 255, 1);
-
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 175%;
-    color: var(--default-color);
-}
-
-input::placeholder {
-    color: var(--gray-color);
-}
-
-.input-box .message {
-    margin-top: -4px;
-    height: 16px;
-
-    font-size: 13px;
-    font-weight: 400;
-}
-
-.message.error{
-    color: var(--error-color);
-}
-
-.message.primary{
-    color: var(--primary-color);
-}
-
 .button-container {
     align-self: stretch;
 
@@ -122,8 +67,6 @@ input::placeholder {
     gap: 16px;
 }
 
-
-
 .sns-container {
     display: flex;
     flex-direction: column;
@@ -131,7 +74,7 @@ input::placeholder {
     gap: 16px;
 }
 
-.sns-container.title {
+.sns-container .title {
     font-size: 16px;
     font-weight: 400;
     color: var(--gray-color);
@@ -140,23 +83,4 @@ input::placeholder {
 .sns-button-container {
     display: flex;
     gap: 24px;
-}
-
-.sns-button {
-    border-radius: 50%;
-    width: 56px;
-    height: 56px;
-}
-
-.sns-button:hover{
-    cursor:pointer;
-    opacity:0.9;
-}
-
-.sns-button.kakao{
-    background-image: url(./images/kakao-button.png);
-}
-
-.sns-button.naver{
-    background-image: url(./images/naver-button.png);
 }
